# bb-cmake-example

./: .gitignore  BBCMAKEEXAMPLE.bb  BBCMAKEEXAMPLE.bb_sample  CMakeLists.txt  README.md  bb-cmake-example.bb  bb-cmake-example_git.bb  main.cxx
